resolved layout-login header issue with overflow: hidden and added white theme linking in homepage

--- a/app/styles/partials/layout.scss
+++ b/app/styles/partials/layout.scss
@@ -64,6 +64,7 @@ html, body
       width: 100%;
 
       background: #0B4A67;
+      overflow: hidden;
     }
     .login-content {
       color: #fff;
